--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ streamlit==1.33.0
 langchain==0.1.17
 langchain_community==0.0.36
 
-
+## For Loader
+pypdf==4.2.0
+lark=1.1.9
+chromadb==0.5.0
 # langchain_openai==0.1.3
 # langchainhub==0.1.15
 
