More mild cleanup and UI assets etc

--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -45,7 +45,7 @@ auto_tag_thread = true
 
 [UI]
 # Name of the app and chatbot.
-name = "Chatbot"
+name = "OpenChatBot"
 
 # Show the readme while the thread is empty.
 show_readme_as_default = true
