untangled chain and chain_name

--- a/src/default_settings.yaml
+++ b/src/default_settings.yaml
@@ -7,7 +7,7 @@ settings_data:
         - "llama2"
       initial_index: 0
     - type: "select"
-      id: "chain"
+      id: "chain_name"
       label: "Chains"
       values:
         - "Simple Chatbot"
