Clean up and new reqs with langchain 0.2.0 release

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
-chainlit==1.0.506
-PyYAML==6.0.1
-chromadb==0.5.0
-langchain==0.1.17
-langchain_community==0.0.36
-
-
-#langchain
-#langchain_community
-#PyPDF2
-#pypdf
-#chromadb
-#langchainhub
-lark==1.1.9
+chainlit==1.1.101
+langchain==0.2.0
+langchain-community==0.0.34
+loguru==0.7.2
